feat: Implement smart response previews and fix SSR issues
This commit introduces the "Smart Response Previews" feature and resolves a critical server-side rendering (SSR) error related to the Monaco Editor.

Key Features & Changes:

**Smart Response Previews:**
- Implemented a new `Preview` tab in the response panel that provides rich visual rendering for various content types.
- Added support for `HTML`, `images` (PNG, JPG, ICO), `SVG`, and `PDF`.
- The API proxy now handles binary data by encoding it in Base64, and the client-side `ResponsePreview` component correctly decodes this data into viewable content.
- Added an "Open in new tab" button for all previewable content.

**SSR Fix for Monaco Editor:**
- Resolved the `ReferenceError: window is not defined` error by implementing dynamic, non-SSR import for the Monaco Editor component using `next/dynamic`.
- The `CodeEditor` component is now marked with `ssr: false` to prevent it from being rendered on the server.
- Added a `Skeleton` loading state to the `CodeEditor` to improve perceived performance while the large Monaco Editor library loads.

**Refinements & Bug Fixes:**
- Corrected various TypeScript errors related to component props and state management.
- Polished the UI and logic for the preview feature.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,8 +28,16 @@
         "time_label": "Time",
         "response_body_tab": "Body",
         "response_headers_tab": "Headers",
+        "response_preview_tab": "Preview",
         "response_waiting": "Waiting for response...",
         "response_placeholder": "Send a request to see the response here"
+    },
+    "previews": {
+        "no_preview_available": "No preview available for this content type.",
+        "unsupported_preview": "Preview for {{contentType}} is not supported yet.",
+        "failed_to_load": "Failed to load preview.",
+        "failed_to_load_base64": "Failed to load preview from Base64 data.",
+        "open_in_new_tab": "Open in new tab"
     },
     "collections": {
         "title": "Collections",
