--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,9 +27,17 @@
         "status_label": "Статус",
         "time_label": "Время",
         "response_body_tab": "Тело",
+        "response_preview_tab": "Предпросмотр",
         "response_headers_tab": "Заголовки",
         "response_waiting": "Ожидание ответа...",
         "response_placeholder": "Отправьте запрос, чтобы увидеть ответ"
+    },
+    "previews": {
+        "no_preview_available": "Предпросмотр недоступен для этого типа контента.",
+        "unsupported_preview": "Предпросмотр для {{contentType}} еще не поддерживается.",
+        "failed_to_load": "Не удалось загрузить предпросмотр.",
+        "failed_to_load_base64": "Не удалось загрузить предпросмотр из данных Base64.",
+        "open_in_new_tab": "Открыть в новой вкладке"
     },
     "collections": {
         "title": "Коллекции",
