feat: Implement request sharing via public links
Implemented a full-featured request sharing system, allowing users to generate a unique, public, read-only link for any request and its response. This enhances collaboration and makes it easy to share API findings.

Key Features & Changes:
**Database & RLS:**
- Created a new `shared_requests` table in Supabase to store request "snapshots".
- Configured Row Level Security policies to allow authenticated users to create (`INSERT`) shares, while enabling public, anonymous read (`SELECT`) access.
- Fine-tuned foreign key constraints (`ON DELETE SET NULL`) to preserve shared links even if the authoring user deletes their account.

**Backend API Route:**
- Developed a new server-side API endpoint (`/api/share/route.ts`) that handles the creation of shared request entries in the database.
- The endpoint validates the user session and returns a unique ID for the created share.

**Frontend UI & Logic:**
- Added a "Share" button to the main interface for authenticated users.
- Implemented a `ShareButton` component with a Popover to display the generated link and provide a one-click copy-to-clipboard functionality.

**Public Share Page:**
- Created a new dynamic page (`/share/[id]`) that fetches the snapshot data from Supabase on the server.
- Designed and built a `ReadOnlyPage` component that provides a polished, non-interactive view of the shared request and response, including all details like headers, body, status, and smart previews.
- The public page is fully themed, internationalized, and includes robust error handling for invalid or corrupted links.

**Bug Fixes & Polish:**
- Resolved numerous backend errors (500, 403, 400) related to RLS policies and database constraints (`created_at`, foreign keys).
- Fixed a critical front-end rendering bug caused by double JSON serialization, ensuring the shared page displays correctly.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,6 +15,21 @@
         "header_key": "Header",
         "header_value": "Value"
     },
+    "auth_editor": {
+        "type_label": "Type",
+        "no_auth": "No Auth",
+        "bearer_token": "Bearer Token",
+        "api_key": "API Key",
+        "basic_auth": "Basic Auth",
+        "token_label": "Token",
+        "username_label": "Username",
+        "password_label": "Password",
+        "key_label": "Key",
+        "value_label": "Value",
+        "add_to_label": "Add to",
+        "header_option": "Header",
+        "query_params_option": "Query Params"
+    },
     "main": {
         "create_request_button": "Create a new request",
         "save_button": "Save",
@@ -23,6 +38,7 @@
         "query_params_tab": "Query Params",
         "headers_tab": "Headers",
         "body_tab": "Body",
+        "auth_tab": "Authorization",
         "response_title": "Response",
         "status_label": "Status",
         "time_label": "Time",
@@ -124,6 +140,25 @@
         "collection_deleted_title": "Collection Deleted",
         "collection_deleted_description": "Collection \"{{name}}\" was deleted.",
         "collection_full_title": "Collection is full",
-        "collection_full_description": "A collection can hold a maximum of {{max}} requests."
-    }
+        "collection_full_description": "A collection can hold a maximum of {{max}} requests.",
+        "share_error_title": "Error Sharing",
+        "share_error_description": "Failed to generate a shareable link. Please try again."
+    },
+    "share_page": {
+        "create_your_own": "Create your own",
+        "request_title": "Request",
+        "response_title": "Response",
+        "query_params_tab": "Query Params",
+        "headers_tab": "Headers",
+        "body_tab": "Body",
+        "no_query_params": "No Query Params provided.",
+        "no_headers": "No Headers provided.",
+        "no_body": "No body provided.",
+        "no_response": "No response was recorded for this share.",
+        "preview_tab": "Preview",
+        "error_title": "Oops! Something went wrong.",
+        "error_description": "The shared request data seems to be corrupted or missing.",
+        "back_button": "Back to Nextman API"
+    },
+    "share_button": { "share": "Share", "generating": "Generating link..." }
 }
