feat(sharing): Enhance request sharing with management features
Building upon the initial sharing implementation, this commit introduces a complete management system for shared links. Users can now view, rename, and delete their shares, providing full control over their public links and improving the overall usability of the feature.

Key Features & Changes:

Share Management UI:
- Introduced a `ManageShares` component, accessible via a new icon in the main UI. It opens a sheet that lists all of the user's active shared links.
- Implemented optimistic UI updates for both deleting and renaming shares, providing a seamless and responsive user experience.
- Renaming is handled inline with an `EditableText` component directly within the list.

Backend & Database Enhancements:
- Configured new `UPDATE` and `DELETE` Row Level Security (RLS) policies in Supabase, securely allowing users to modify and remove only their own shared links.
- Refined the backend API (`/api/share`) to generate more meaningful default names for new shares (e.g., 'GET /api/users') instead of a generic 'Untitled Request', drastically improving clarity in the management list.

Public Share Page Improvements:
- Corrected the public share page (`/share/[id]`) to fetch and prominently display the custom or auto-generated name of the share. This ensures consistency between what the user sees in their management panel and what the public link displays.
- Updated the `ReadOnlyPage` component to accept and render the proper share name.

Internationalization (i18n):
- Added full internationalization (i18n) support for all new UI elements, including titles, descriptions, buttons, and toast notifications related to the share management panel.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -126,6 +126,12 @@
         "english": "English",
         "russian": "Russian"
     },
+    "manage_shares": {
+        "button_title": "Manage Shares",
+        "title": "Manage Shared Requests",
+        "description": "You have {{count}} / {{max}} shared links.",
+        "untitled_share": "Untitled Share"
+    },
     "toasts": {
         "validation_error_title": "Validation Error",
         "validation_error_description": "Please provide a request name and select a collection.",
@@ -142,7 +148,17 @@
         "collection_full_title": "Collection is full",
         "collection_full_description": "A collection can hold a maximum of {{max}} requests.",
         "share_error_title": "Error Sharing",
-        "share_error_description": "Failed to generate a shareable link. Please try again."
+        "share_error_description": "Failed to generate a shareable link. Please try again.",
+        "fetch_shares_error_title": "Error",
+        "fetch_shares_error_description": "Could not fetch shared links.",
+        "delete_share_error_title": "Error",
+        "delete_share_error_description": "Failed to delete share.",
+        "share_deleted_title": "Share Deleted",
+        "share_deleted_description": "Share \"{{name}}\" was deleted.",
+        "update_share_name_error_title": "Error",
+        "update_share_name_error_description": "Failed to update name.",
+        "share_limit_reached_title": "Limit Reached",
+        "share_limit_reached_description": "You can only have {{max}} active shares. Please delete an old one."
     },
     "share_page": {
         "create_your_own": "Create your own",
@@ -158,7 +174,8 @@
         "preview_tab": "Preview",
         "error_title": "Oops! Something went wrong.",
         "error_description": "The shared request data seems to be corrupted or missing.",
-        "back_button": "Back to Nextman API"
+        "back_button": "Back to Nextman API",
+        "default_title": "Shared Request"
     },
     "share_button": { "share": "Share", "generating": "Generating link..." }
 }
